[package]
name = "three-edge-connected"
version = "0.1.0"
authors = ["christian@chfi.se"]
edition = "2018"
repository = "https://github.com/chfi/rs-3-edge"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfa = "0.4"
structopt = "0.3"