[package]
name = "three-edge-connected"
version = "0.2.0"
authors = ["christian@chfi.se"]
edition = "2018"
license = "MIT"
description = "Library and CLI tool for finding 3-edge-connected components of graphs, especially graphs in the GFA format."
repository = "https://github.com/chfi/rs-3-edge"
readme = "readme.md"
keywords = ["graph"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfa = "0.9"
structopt = "0.3"
bstr = "0.2"
fxhash = "0.2"
